--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "jira": "0.9.2",
-    "write": "1.0.3",
+    "make-dir": "1.3.0",
+    "moment": "^2.22.2",
+    "nvm": "0.0.4",
     "string-format": "2.0.0",
-    "make-dir": "1.3.0"
+    "write": "1.0.3"
   }
 }
